--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
    <section class="container navbar">
     <nav>
         <img src="images/Scratch_S.svg.png" alt="logo" class="logo">
+        <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+            <span class="hamburger"></span>
+        </button>
         <ul class="nav-list">
             <li><a href="about.html">About</a></li>
             <li><a href="#Projects">Projects</a></li>
@@ -81,6 +84,6 @@
     </div>
     <p>Sana Jabboulieh 2025</p>
    </footer>
-    <script src="js/observe.js"></script>
+        <script src="js/observe.js"></script>
 </body>
 </html>
