--- a/about.html
+++ b/about.html
@@ -12,6 +12,9 @@
     <section class="container navbar">
     <nav>
         <img src="images/Scratch_S.svg.png" alt="logo" class="logo">
+        <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">
+            <span class="hamburger"></span>
+        </button>
         <ul class="nav-list">
             <li><a href="about.html">About</a></li>
             <li><a href="index.html">Main</a></li>
