--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
             <button><a href="https://github.com/SanaJabboulieh/cactus-project.git">View Project</a></button>
         </div>
         <div class="project-photo">
-            <img src="/images/cactus project.png" alt="">
+            <img src="images/cactus project.png" alt="">
         </div>
     </div>
     <div class="project-details">
         <div class="project-photo">
-            <img src="/images/s.store.png" alt="">
+            <img src="images/s.store.png" alt="">
         </div>
         <div class="project-description">
             <h2 class="project-description-title">S.Store</h2>
@@ -71,7 +71,7 @@
             <button><a href="https://github.com/SanaJabboulieh/leon-template.git">View Project</a></button>
         </div>
         <div class="project-photo">
-            <img src="/images/leon temlate.png" alt="">
+            <img src="images/leon temlate.png" alt="">
         </div>
     </div>
     </div>
