--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <button><a href="https://github.com/SanaJabboulieh/cactus-project.git">View Project</a></button>
         </div>
         <div class="project-photo">
-            <img src="images/cactus project.png" alt="">
+            <img src="/images/cactus project.png" alt="">
         </div>
     </div>
     <div class="project-details">
@@ -86,4 +86,5 @@
    </footer>
         <script src="js/observe.js"></script>
 </body>
+
 </html>
